将项目连接到数据库，对话内容存储到数据库，实现对话记忆功能，完成创建日程功能